--- a/index.html
+++ b/index.html
@@ -3,22 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>NextTrip | Travel Packages</title>
-    <link rel="stylesheet" href="style.css">
+
+    <!-- GSAP -->
+    <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+    <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+
+    <link rel="stylesheet" href="./Styles/style.css">
 </head>
 <body>
 
-<!-- Navbar -->
+<!-- NAVBAR -->
 <header class="navbar">
+  <div class="container">
     <h2>NextTrip</h2>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Pages</a>
-        <a href="#">Destinations</a>
-        <a href="#">Packages</a>
+      <a href="../index.html" class="active">Home</a>
+      <a href="./Pages/Pages.html">Pages</a>
+      <a href="./Pages/Packages.html">Packages</a>
+      <a href="#">Destinations</a>
     </nav>
+  </div>
 </header>
 
-<!-- Hero Section -->
+<!-- HERO -->
 <section class="hero">
     <div class="hero-content">
         <h1>Travel Packages<br><span>Crafted for You</span></h1>
@@ -26,69 +33,68 @@
     </div>
 </section>
 
-<!-- Packages -->
+<!-- PACKAGES -->
 <section class="packages">
-    <div class="package-card1">
+    <div class="package-card" data-title="Explore Bromo">
         <h3>Explore Bromo</h3>
         <p>7 Days Trip</p>
         <p class="price">$450 / pack</p>
-        <button onclick="book()">Learn More</button>
+        <button>Learn More</button>
     </div>
 
-    <div class="package-card2">
+    <div class="package-card" data-title="Wildlife Safari">
         <h3>Wildlife Safari</h3>
         <p>3 Days Trip</p>
         <p class="price">$950 / pack</p>
-        <button onclick="book()">Learn More</button>
+        <button>Learn More</button>
     </div>
 
-    <div class="package-card3">
+    <div class="package-card" data-title="Fuji Midnights">
         <h3>Fuji Midnights</h3>
         <p>5 Days Trip</p>
         <p class="price">$750 / pack</p>
-        <button onclick="book()">Learn More</button>
+        <button>Learn More</button>
     </div>
 
-    <div class="package-card4">
+    <div class="package-card" data-title="Enjoy Hawaii">
         <h3>Enjoy Hawaii</h3>
         <p>7 Days Trip</p>
         <p class="price">$450 / pack</p>
-        <button onclick="book()">Learn More</button>
+        <button>Learn More</button>
     </div>
 
-    <div class="package-card5">
+    <div class="package-card" data-title="Bali Surfing">
         <h3>Bali Surfing</h3>
         <p>3 Days Trip</p>
         <p class="price">$950 / pack</p>
-        <button onclick="book()">Learn More</button>
+        <button>Learn More</button>
     </div>
 
-    <div class="package-card6">
+    <div class="package-card" data-title="Nusa Penida">
         <h3>Nusa Penida</h3>
         <p>5 Days Trip</p>
         <p class="price">$750 / pack</p>
-        <button onclick="book()">Learn More</button>
-    </div>
-    
-    <div class="package-card7">
-        <h3>Nusa Penida</h3>
-        <p>5 Days Trip</p>
-        <p class="price">$750 / pack</p>
-        <button onclick="book()">Learn More</button>
-    </div>
-    <div class="package-card8">
-        <h3>Nusa Penida</h3>
-        <p>5 Days Trip</p>
-        <p class="price">$750 / pack</p>
-        <button onclick="book()">Learn More</button>
+        <button>Learn More</button>
     </div>
 </section>
 
-<!-- Footer -->
+<!-- FOOTER -->
 <footer class="footer">
     <p>© 2026 NextTrip. All Rights Reserved.</p>
 </footer>
 
-<script src="script.js"></script>
+<!-- MODAL -->
+<div class="modal" id="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2 id="modalTitle"></h2>
+        <p>Full itinerary, hotel stay, meals & guided tours included.</p>
+        <a href="./Pages/auth.html" class="book-btn" onclick="bookNow('Explore Bromo')">
+  Book Now
+</a>
+    </div>
+</div>
+
+<script src="./Scripts/script.js"></script>
 </body>
 </html>
