--- a/Pages/Packages.html
+++ b/Pages/Packages.html
@@ -76,6 +76,21 @@
     <a href="#" class="book-btn" data-package="Nusa Penida">Book Now</a>
   </div>
 
+  <div class="package-card" data-title="Explore Bromo">
+    <h3>Explore Bromo</h3>
+    <p>7 Days Trip</p>
+    <p class="price">$450 / pack</p>
+    <a href="#" class="book-btn" data-package="Explore Bromo">Book Now</a>
+  </div>
+
+  <div class="package-card" data-title="Explore Bromo">
+    <h3>Explore Bromo</h3>
+    <p>7 Days Trip</p>
+    <p class="price">$450 / pack</p>
+    <a href="#" class="book-btn" data-package="Explore Bromo">Book Now</a>
+  </div>
+  
+
 </section>
 
 <!-- MODAL -->
@@ -89,9 +104,7 @@
 </div>
 
 <!-- FOOTER -->
-<footer class="footer">
-  <p>© 2026 NextTrip. All Rights Reserved.</p>
-</footer>
+
 
 <script src="../Scripts/script3.js"></script>
 </body>
