--- a/Pages/Pages.html
+++ b/Pages/Pages.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>NextTrip | Pages</title>
     <link rel="stylesheet" href="../Styles/style2.css">
+    <link rel="stylesheet" href="../Styles/Destination.css">
 </head>
 <body>
 
@@ -15,7 +16,7 @@
       <a href="../index.html">Home</a>
       <a href="Pages.html" class="active">Pages</a>
       <a href="../index.html#packages">Packages</a>
-      <a href="#">Destinations</a>
+      <a href="../Pages/Destination.html">Destinations</a>
     </nav>
   </div>
 </header>
@@ -65,12 +66,14 @@
         <p>Frequently asked questions</p>
     </a>
 
+    <a href="#" class="page-card">
+        <h3>Reviews</h3>
+        <p>What travelers say</p>
+    </a>
+
 </section>
 
-<!-- FOOTER -->
-<footer class="footer">
-    <p>© 2026 NextTrip. All Rights Reserved.</p>
-</footer>
+
 <script src="../Scripts/script2.js"></script>
 </body>
 </html>
